внесла изменения: цвет и шрифт

--- a/catalog.html
+++ b/catalog.html
@@ -89,14 +89,14 @@
         <li>
           <a href="" class="sorting-icon sorting-icon-current" aria-label="Сортировать результат по возрастанию">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#B2B2B2" d="M5.5 0L0 10h11z" />
+              <path fill="#CACACA" d="M5.5 0L0 10h11z" />
             </svg>
           </a>
         </li>
         <li>
           <a href="" class="sorting-icon" aria-label="Сортировать результат по убыванию">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#B2B2B2" d="M5.5 10L0 0h11" />
+              <path fill="#CACACA" d="M5.5 10L0 0h11" />
             </svg>
           </a>
         </li>
