сетка главной страницы без формы

--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <a><img src="img/hotel-1.jpg" class="catalog-img" width="135" height="90"
-              alt="Курортный спа-отель Amara Resort & Spa с великолепным видом на Красные скалы"></a>
+              alt="Фото спа-отеля Amara Resort & Spa"></a>
           <h3 class="catalog-title">Amara Resort & Spa</h3>
           <div class="stars stars-four"></div>
           <p class="catalog-type">Гостиница</p>
@@ -119,7 +119,7 @@
         </li>
         <li class="catalog-item">
           <a><img src="img/hotel-2.jpg" class="catalog-img" width="135" height="90"
-              alt="Мотель Desert Quail Inn, расположенный в деревне Оук-Крик"></a>
+              alt="Фото мотеля Desert Quail Inn"></a>
           <h3 class="catalog-title">Desert Quail Inn</h3>
           <div class="stars stars-three"></div>
           <p class="catalog-type">Мотель</p>
@@ -130,7 +130,7 @@
         </li>
         <li class="catalog-item">
           <a><img src="img/hotel-3.jpg" class="catalog-img" width="135" height="90"
-              alt="Апартаменты Villas at Poco Diablo, расположенные недалеко от Кафедральной горы"></a>
+              alt="Фото апартаментов Villas at Poco Diablo"></a>
           <h3 class="catalog-title">Villas at Poco Diablo</h3>
           <div class="stars stars-two"></div>
           <p class="catalog-type">Апартаменты</p>
