сетка формы поиска отелей главной страницы

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="feature-text-white">
                 <h3 class="title title-white">Настоящий  городок</h3>
                 <span>— №1 —</span>
-                 <p class="text text-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                 <p class="text text-white">Седона — не аттракцион для туристов, там&nbsp;течёт своя жизнь</p>
               </div>
               <img src="img/town.jpg" width="800" height="256" alt="Фото Седоны с красивым видом на горы">
             </div>
@@ -73,7 +73,7 @@
             <div class="feature-item-blue">
               <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола, созданный самой природой">
               <div class="feature-text-white">
-                <h3 class="title title-white">Там есть  Мост дьявола  </h3>
+                <h3 class="title title-white">Там есть  Мост&nbsp;дьявола  </h3>
                 <span>— №2 —</span>
                 <p class="text text-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
@@ -181,9 +181,9 @@
             <span class="visually-hidden">Календарь</span>
           </button>
         </div>
-        <p>
+        <div class="number">
           <label for="adults">Взрослые:</label>
-          <div>
+          <div class="number-adults">
             <button class="btn-count btn-minus" type="button">
               <span>-</span>
             </button>
@@ -192,8 +192,8 @@
               <span>+</span>
             </button>
           </div>
-          <div>
-            <label for="children">Дети:</label>
+          <label for="children">Дети:</label>
+          <div class="number-children">
             <button class=" btn-count btn-minus" type="button">
               <span>-</span>
             </button>
@@ -202,7 +202,7 @@
               <span>+</span>
             </button>
           </div>
-        </p>
+        </div>
         <p>
           <button class="btn btn-blue" type="submit">Найти</button>
         </p>
