сетка каталога без ползунка

--- a/catalog.html
+++ b/catalog.html
@@ -87,13 +87,15 @@
       </section>
 
       <section class="filter-result">
-        <p>Найдено:<span>3</span></p>
-        <h2>Сортировка</h2>
-        <ul class="filter-list">
-          <li><a href="" class="current-result">По цене</a></li>
-          <li><a href="">По типу</a></li>
-          <li><a href="">По рейтингу</a></li>
-        </ul>
+        <div class="filter-ressult-text">
+          <p>Найдено:<span>3</span></p>
+          <h2>Сортировка</h2>
+          <ul class="filter-list">
+            <li><a href="" class="current-result">По цене</a></li>
+            <li><a href="">По типу</a></li>
+            <li><a href="">По рейтингу</a></li>
+          </ul>
+        </div>
         <ul class="sorting">
           <li>
             <a href="" class="sorting-icon sorting-icon-current" aria-label="Сортировать результат по возрастанию">
@@ -116,37 +118,75 @@
         <h2 class="visually-hidden">Список мест проживания</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <a><img src="img/hotel-1.jpg" class="catalog-img" width="135" height="90"
-                alt="Фото спа-отеля Amara Resort & Spa"></a>
-            <h3 class="catalog-title">Amara Resort & Spa</h3>
-            <div class="stars stars-four"></div>
-            <p class="catalog-type">Гостиница</p>
-            <p class="catalog-price">От 4000 Р.</p>
-            <a href="#" class="catalog-more">Подробнее</a>
-            <a href="#" class="catalog-reservation">Забронировать</a>
-            <p class="catalog-rating">Рейтинг: 8,5</p>
+            <div class="catalog-info">
+              <a>
+                <img src="img/hotel-1.jpg" class="catalog-img" width="135" height="90"
+                  alt="Фото спа-отеля Amara Resort & Spa">
+              </a>
+              <div>
+                <h3 class="catalog-title">Amara Resort & Spa</h3>
+                <div class="catalog-row">
+                  <p class="catalog-type-one">Гостиница</p>
+                  <p class="catalog-price">От 4000 Р.</p>
+                </div>
+                <div class="catalog-row">
+                  <a href="#" class="catalog-more">Подробнее</a>
+                  <a href="#" class="catalog-reservation">Забронировать</a>
+                </div>
+              </div>
+            </div>
+            <div class="catalog-rating">
+              <div class="stars stars-four"></div>
+              <p>Рейтинг: 8,5</p>
+            </div>
           </li>
+
           <li class="catalog-item">
-            <a><img src="img/hotel-2.jpg" class="catalog-img" width="135" height="90"
-                alt="Фото мотеля Desert Quail Inn"></a>
-            <h3 class="catalog-title">Desert Quail Inn</h3>
-            <div class="stars stars-three"></div>
-            <p class="catalog-type">Мотель</p>
-            <p class="catalog-price">От 3000 Р.</p>
-            <a href="#" class="catalog-more">Подробнее</a>
-            <a href="#" class="catalog-reservation">Забронировать</a>
-            <p class="catalog-rating">Рейтинг: 8,9</p>
+            <div class="catalog-info">
+              <a>
+                <img src="img/hotel-2.jpg" class="catalog-img" width="135" height="90"
+                  alt="Фото мотеля Desert Quail Inn">
+              </a>
+              <div>
+                <h3 class="catalog-title">Desert Quail Inn</h3>
+                <div class="catalog-row">
+                  <p class="catalog-type-two">Мотель</p>
+                  <p class="catalog-price">От 3000 Р.</p>
+                </div>
+                <div class="catalog-row">
+                  <a href="#" class="catalog-more">Подробнее</a>
+                  <a href="#" class="catalog-reservation">Забронировать</a>
+                </div>
+              </div>
+            </div>
+            <div class="catalog-rating">
+              <div class="stars stars-three"></div>
+              <p>Рейтинг: 8,9</p>
+            </div>
           </li>
+
           <li class="catalog-item">
-            <a><img src="img/hotel-3.jpg" class="catalog-img" width="135" height="90"
-                alt="Фото апартаментов Villas at Poco Diablo"></a>
-            <h3 class="catalog-title">Villas at Poco Diablo</h3>
-            <div class="stars stars-two"></div>
-            <p class="catalog-type">Апартаменты</p>
-            <p class="catalog-price">От 2000 Р.</p>
-            <a href="#" class="catalog-more">Подробнее</a>
-            <a href="#" class="catalog-reservation">Забронировать</a>
-            <p class="catalog-rating">Рейтинг: 9,2</p>
+            <div class="catalog-info">
+              <a>
+                <img src="img/hotel-3.jpg" class="catalog-img" width="135" height="90"
+                  alt="Фото апартаментов Villas at Poco Diablo">
+              </a>
+              <div>
+                <h3 class="catalog-title">Villas at Poco Diablo</h3>
+                <div class="catalog-row">
+                  <p class="catalog-type-three">Апартаменты</p>
+                  <p class="catalog-price">От 2000 Р.</p>
+                </div>
+                <div class="catalog-row">
+                  <a href="#" class="catalog-more">Подробнее</a>
+                  <a href="#" class="catalog-reservation">Забронировать</a>
+                </div>
+              </div>
+            </div>
+            <div class="catalog-rating">
+              <div class="stars stars-two"></div>
+              <p>Рейтинг: 9,2</p>
+            </div>
           </li>
         </ul>
       </section>
