внесла изменения в главную страницу (убрала маргины и проверила на переполненность)

--- a/catalog.html
+++ b/catalog.html
@@ -20,9 +20,7 @@
           <li><a href="#" class="current-link"> Гостиницы</a></li>
         </ul>
       </nav>
-      <a href="index.html" class="logo">
-        <img src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны">
-      </a>
+      <img class="logo" src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны">
     </header>
 
     <main class="catalog-container">
