--- a/catalog.html
+++ b/catalog.html
@@ -68,10 +68,10 @@
             <fieldset class="filter-price">
               <legend>Стоимость в сутки (р):</legend>
               <div class="filter-price-box">
-                <label>от
+                <label class="price-min">от
                   <input class="price-per-day" type="number" name="price-per-day" id="start-price" value="0">
                 </label>
-                <label>до
+                <label class="price-max">до
                   <input type="number" name="price-per-day" id="end-price" value="3000">
                 </label>
               <div class="range">
@@ -193,41 +193,39 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer>
       <p class="footer-contacts">
         <a class="contact-link" href="#" aria-label="#Посетить Седону">#visitSEDONA</a><br>
         <a class="contact-tel" href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
       </p>
-      <div class="footer-social">
-        <h2 class="visually-hidden">Седона в соцсетях</h2>
-        <ul class="social-list">
-          <li class="social-button">
-            <a href="" aria-label="Твиттер">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17"
-                height="15" viewBox="0 0 17 15">
-                <path fill="#FFF"
-                  d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z" />
-              </svg>
-            </a>
-          </li>
-          <li class="social-button">
-            <a href="" aria-label="Фейсбук">
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
-                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
-              </svg>
-            </a>
-          </li>
-          <li class="social-button">
-            <a href="" aria-label="Ютуб">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20"
-                height="16" viewBox="0 0 20 16">
-                <path fill="#FFF"
-                  d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" />
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <h2 class="visually-hidden">Седона в соцсетях</h2>
+      <ul class="social-list">
+        <li class="social-button">
+          <a href="" aria-label="Твиттер">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15"
+              viewBox="0 0 17 15">
+              <path fill="#FFF"
+                d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z" />
+            </svg>
+          </a>
+        </li>
+        <li class="social-button">
+          <a href="" aria-label="Фейсбук">
+            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+              <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
+            </svg>
+          </a>
+        </li>
+        <li class="social-button">
+          <a href="" aria-label="Ютуб">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
+              viewBox="0 0 20 16">
+              <path fill="#FFF"
+                d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" />
+            </svg>
+          </a>
+        </li>
+      </ul>
       <p class="footer-copyright">
         Website by
         <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт HTML Academy">
@@ -238,6 +236,6 @@
           </svg>
         </a>
       </p>
-  </footer>
+    </footer>
   </div>
 </body>
