иконки поменяла на псевдожлементы

--- a/index.html
+++ b/index.html
@@ -51,18 +51,15 @@
             </div>
             <ul class="features-list-one">
               <li class="feature-item-one">
-                <div class="pic pic-one"></div>
-                <h4 class="title">Жильё</h4>
+                <h4 class="title title-one">Жильё</h4>
                 <p class="text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="feature-item-one">
-                <div class="pic pic-two"></div>
-                <h4 class="title">Еда</h4>
+                <h4 class="title title-two">Еда</h4>
                 <p class="text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="feature-item-one">
-                <div class="pic pic-three"></div>
-                <h4 class="title">Сувениры</h4>
+                <h4 class="title title-three">Сувениры</h4>
                 <p class="text">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
@@ -111,14 +108,14 @@
             <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
               <div class="date">
                 <label for="datein">Дата заезда:</label>
-                <input type="date" name="datein" id="datein">
+                <input type="text" name="datein" id="datein" placeholder="24 Апреля 2017">
                 <button class="btn-calend" type="button">
                   <span class="visually-hidden">Календарь</span>
                 </button>
               </div>
               <div class="date">
                 <label for="dateout">Дата выезда:</label>
-                <input type="date" name="dateout" id="dateout">
+                <input type="text" name="dateout" id="dateout" placeholder="4 июля 2017">
                 <button class="btn-calend" type="button">
                   <span class="visually-hidden">Календарь</span>
                 </button>
