--- a/catalog.html
+++ b/catalog.html
@@ -33,15 +33,15 @@
               <legend>Инфраструктура:</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input type="checkbox" name="pool" id="filter-pool" checked>
+                  <input type="checkbox" name="pool" id="filter-pool" tabindex="0" checked>
                   <label for="filter-pool">Бассейн</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="parking" id="filter-parking">
+                  <input type="checkbox" name="parking" id="filter-parking" tabindex="0">
                   <label for="filter-parking">Парковка</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="wi-fi" id="filter-wi-fi">
+                  <input type="checkbox" name="wi-fi" id="filter-wi-fi" tabindex="0">
                   <label for="filter-wi-fi">WI-FI</label>
                 </li>
               </ul>
@@ -50,15 +50,15 @@
               <legend>Тип жилья</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <input type="checkbox" name="hotel" id="filter-hotel" tabindex="0" checked>
                   <label for="filter-hotel">Гостиница</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="motel" id="filter-motel" checked>
+                  <input type="checkbox" name="motel" id="filter-motel" tabindex="0" checked>
                   <label for="filter-motel">Мотель</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <input type="checkbox" name="apartments" id="filter-apartments" tabindex="0" checked>
                   <label for="filter-apartments">Апартаменты </label>
                 </li>
               </ul>
