ссылка на главную страницу, цвет кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,9 @@
           <li><a href="#" class="current-link"> Гостиницы</a></li>
         </ul>
       </nav>
-      <img class="logo" src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны">
+      <a href="index.html">
+        <img class="logo" src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны">
+      </a>
     </header>
 
     <main class="catalog-container">
@@ -74,13 +76,13 @@
                 <label class="price-max">до
                   <input type="number" name="price-per-day" id="end-price" value="3000">
                 </label>
-              <div class="range">
-                <div class="scale">
-                  <div class="scale-bar"></div>
+                <div class="range">
+                  <div class="scale">
+                    <div class="scale-bar"></div>
+                  </div>
+                  <div class="range-toggle range-toggle-min"></div>
+                  <div class="range-toggle range-toggle-max"></div>
                 </div>
-                <div class="range-toggle range-toggle-min"></div>
-                <div class="range-toggle range-toggle-max"></div>
-              </div>
             </fieldset>
             <button type="submit" class="btn-filter">Показать</button>
           </div>
