--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="nav">
         <ul class="site-nav">
-          <li><a href="#" class="current-link">Информация</a></li>
+          <li class="current-link">Информация</li>
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="catalog.html">Гостиницы</a></li>
@@ -108,14 +108,14 @@
             <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
               <div class="date">
                 <label for="datein">Дата заезда:</label>
-                <input type="text" name="datein" id="datein" placeholder="24 Апреля 2017">
+                <input type="text" name="datein" id="datein" placeholder="24 Апреля 2017" required>
                 <button class="btn-calend" type="button">
                   <span class="visually-hidden">Календарь</span>
                 </button>
               </div>
               <div class="date">
                 <label for="dateout">Дата выезда:</label>
-                <input type="text" name="dateout" id="dateout" placeholder="4 июля 2017">
+                <input type="text" name="dateout" id="dateout" placeholder="4 июля 2017" required>
                 <button class="btn-calend" type="button">
                   <span class="visually-hidden">Календарь</span>
                 </button>
@@ -126,7 +126,7 @@
                   <button class="btn-count btn-minus" type="button">
                     <span>-</span>
                   </button>
-                  <input type="number" name="adults" id="adults" min="0" value="2">
+                  <input type="number" name="adults" id="adults" min="0" value="2" required>
                   <button class="btn-count btn-plus" type="button">
                     <span>+</span>
                   </button>
@@ -136,7 +136,7 @@
                   <button class=" btn-count btn-minus" type="button">
                     <span>-</span>
                   </button>
-                  <input type="number" name="children" id="children" min="0" value="0">
+                  <input type="number" name="children" id="children" min="0" value="0" required>
                   <button class="btn-count btn-plus" type="button">
                     <span>+</span>
                   </button>
@@ -152,8 +152,7 @@
 
       <section class="map">
         <h2 class="visually-hidden">Карта города Седона</h2>
-        <a href="#"><img src="https://via.placeholder.com/1199x597"></a>
-      </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9067.509482695446!2d-111.76350235355952!3d34.868346326477415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1583005726133!5m2!1sru!2sru" width="1200" height="597" frameborder="0" style="border:0;" allowfullscreen=""></iframe>      </section>
     </main>
 
     <footer class="footer">
@@ -202,6 +201,7 @@
     </footer>
   </div>
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
