попап и кнопки изменила

--- a/catalog.html
+++ b/catalog.html
@@ -35,15 +35,15 @@
               <legend>Инфраструктура:</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input type="checkbox" name="pool" id="filter-pool" tabindex="0" checked>
+                  <input class="checkbox" type="checkbox" name="pool" id="filter-pool" checked>
                   <label for="filter-pool">Бассейн</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="parking" id="filter-parking" tabindex="0">
+                  <input class="checkbox" type="checkbox" name="parking" id="filter-parking">
                   <label for="filter-parking">Парковка</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="wi-fi" id="filter-wi-fi" tabindex="0">
+                  <input class="checkbox" type="checkbox" name="wi-fi" id="filter-wi-fi">
                   <label for="filter-wi-fi">WI-FI</label>
                 </li>
               </ul>
@@ -52,16 +52,16 @@
               <legend>Тип жилья</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input type="checkbox" name="hotel" id="filter-hotel" tabindex="0" checked>
+                  <input class="checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
                   <label for="filter-hotel">Гостиница</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="motel" id="filter-motel" tabindex="0" checked>
+                  <input class="checkbox" type="checkbox" name="motel" id="filter-motel" checked>
                   <label for="filter-motel">Мотель</label>
                 </li>
                 <li class="filter-option">
-                  <input type="checkbox" name="apartments" id="filter-apartments" tabindex="0" checked>
-                  <label for="filter-apartments">Апартаменты </label>
+                  <input class="checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <label for="filter-apartments">Апартаменты</label>
                 </li>
               </ul>
             </fieldset>
@@ -71,10 +71,10 @@
               <legend>Стоимость в сутки (р):</legend>
               <div class="filter-price-box">
                 <label class="price-min">от
-                  <input class="price-per-day" type="number" name="price-per-day" id="start-price" value="0">
+                  <input class="price-per-day" type="text" name="price-per-day" id="start-price" value="0" placeholder="0">
                 </label>
                 <label class="price-max">до
-                  <input type="number" name="price-per-day" id="end-price" value="3000">
+                  <input type="text" name="price-per-day" id="end-price" value="3000" placeholder="3000">
                 </label>
                 <div class="range">
                   <div class="scale">
