--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <button class="btn-count btn-minus" type="button">
                     <span>-</span>
                   </button>
-                  <input type="number" name="adults" id="adults" min="0" value="2" required>
+                  <input type="text" name="adults" id="adults" min="0" value="2" placeholder="2" required>
                   <button class="btn-count btn-plus" type="button">
                     <span>+</span>
                   </button>
@@ -136,7 +136,7 @@
                   <button class=" btn-count btn-minus" type="button">
                     <span>-</span>
                   </button>
-                  <input type="number" name="children" id="children" min="0" value="0" required>
+                  <input type="text" name="children" id="children" min="0" value="0" placeholder="0" required>
                   <button class="btn-count btn-plus" type="button">
                     <span>+</span>
                   </button>
