--- a/catalog.html
+++ b/catalog.html
@@ -35,15 +35,15 @@
               <legend>Инфраструктура:</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+                  <input class="checkbox visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
                   <label for="filter-pool">Бассейн</label>
                 </li>
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="parking" id="filter-parking">
+                  <input class="checkbox visually-hidden" type="checkbox" name="parking" id="filter-parking">
                   <label for="filter-parking">Парковка</label>
                 </li>
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="wi-fi" id="filter-wi-fi">
+                  <input class="checkbox visually-hidden" type="checkbox" name="wi-fi" id="filter-wi-fi">
                   <label for="filter-wi-fi">WI-FI</label>
                 </li>
               </ul>
@@ -52,15 +52,15 @@
               <legend>Тип жилья</legend>
               <ul class="filter-options">
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <input class="checkbox visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
                   <label for="filter-hotel">Гостиница</label>
                 </li>
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+                  <input class="checkbox visually-hidden" type="checkbox" name="motel" id="filter-motel" checked>
                   <label for="filter-motel">Мотель</label>
                 </li>
                 <li class="filter-option">
-                  <input class="checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <input class="checkbox visually-hidden" type="checkbox" name="apartments" id="filter-apartments" checked>
                   <label for="filter-apartments">Апартаменты</label>
                 </li>
               </ul>
