--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="nav">
         <ul class="site-nav">
-          <li><a href="index.html">Информация</a></li>
+          <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="#" class="current-link"> Гостиницы</a></li>
