анимация заполнения формы

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
           <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
             <div class="date">
               <label for="datein">Дата заезда:</label>
-              <input type="text" name="datein" id="datein" value="" placeholder="24 Апреля 2017" required>
+              <input type="text" name="datein" id="datein" value="" placeholder="24 Апреля 2017">
               <button class="btn-calend" type="button">
                 <span class="visually-hidden">Календарь</span>
               </button>
             </div>
             <div class="date">
               <label for="dateout">Дата выезда:</label>
-              <input type="text" name="dateout" id="dateout" value="" placeholder="4 июля 2017" required>
+              <input type="text" name="dateout" id="dateout" value="" placeholder="4 июля 2017">
               <button class="btn-calend" type="button">
                 <span class="visually-hidden">Календарь</span>
               </button>
@@ -134,7 +134,7 @@
                 <button class="btn-count btn-minus" type="button">
                   <span class="minus">-</span>
                 </button>
-                <input type="text" name="adults" id="adults" min="0" step="1" value="2" placeholder="2" required>
+                <input type="text" name="adults" id="adults" min="0" step="1" value="2" placeholder="2">
                 <button class="btn-count btn-plus" type="button">
                   <span class="plus">+</span>
                 </button>
@@ -144,7 +144,7 @@
                 <button class=" btn-count btn-minus" type="button">
                   <span class="minus">-</span>
                 </button>
-                <input type="text" name="children" id="children" min="0" step="1" value="0" placeholder="0" required>
+                <input type="text" name="children" id="children" min="0" step="1" value="0" placeholder="0">
                 <button class="btn-count btn-plus" type="button">
                   <span class="plus">+</span>
                 </button>
