кнопки плюс и минус в js

--- a/index.html
+++ b/index.html
@@ -132,23 +132,15 @@
             <div class="number">
               <label for="adults">Взрослые:</label>
               <div class="number-adults">
-                <button class="btn-count btn-minus" type="button">
-                  <span class="minus">-</span>
-                </button>
+                <button class="btn-count btn-minus" type="button">-</button>
                 <input type="text" name="adults" id="adults" min="0" step="1" value="2" placeholder="2">
-                <button class="btn-count btn-plus" type="button">
-                  <span class="plus">+</span>
-                </button>
+                <button class="btn-count btn-plus" type="button">+</button>
               </div>
               <label for="children">Дети:</label>
               <div class="number-children">
-                <button class=" btn-count btn-minus" type="button">
-                  <span class="minus">-</span>
-                </button>
+                <button class=" btn-count btn-minus" type="button">-</button>
                 <input type="text" name="children" id="children" min="0" step="1" value="0" placeholder="0">
-                <button class="btn-count btn-plus" type="button">
-                  <span class="plus">+</span>
-                </button>
+                <button class="btn-count btn-plus" type="button">+</button>
               </div>
             </div>
             <p>
