--- a/index.html
+++ b/index.html
@@ -132,15 +132,23 @@
             <div class="number">
               <label for="adults">Взрослые:</label>
               <div class="number-adults">
-                <button class="btn-count btn-minus" type="button">-</button>
+                <button class="btn-count btn-minus" type="button">
+                  <span class="minus"></span>
+                </button>
                 <input type="text" name="adults" id="adults" min="0" step="1" value="2" placeholder="2">
-                <button class="btn-count btn-plus" type="button">+</button>
+                <button class="btn-count btn-plus" type="button">
+                  <span class="plus"></span>
+                </button>
               </div>
               <label for="children">Дети:</label>
               <div class="number-children">
-                <button class=" btn-count btn-minus" type="button">-</button>
+                <button class=" btn-count btn-minus" type="button">
+                  <span class="minus"></span>
+                </button>
                 <input type="text" name="children" id="children" min="0" step="1" value="0" placeholder="0">
-                <button class="btn-count btn-plus" type="button">+</button>
+                <button class="btn-count btn-plus" type="button">
+                  <span class="plus"></span>
+                </button>
               </div>
             </div>
             <p>
