--- a/index.html
+++ b/index.html
@@ -74,23 +74,25 @@
               </div>
             </div>
           </li>
-          <div class="feature-item-grey">
-            <li class="feature-item">
-              <h3 class="title">Небольшая площадь</h3>
-              <span>— №3 —</span>
-              <p class="text">Все достопримечательности  находятся очень близко</p>
-            </li>
-            <li class="feature-item">
-              <h3 class="title">Красивая  дорога</h3>
-              <span>— №4 —</span>
-              <p class="text">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
-            </li>
-            <li class="feature-item">
-              <h3 class="title">Мало  туристов</h3>
-              <span>— №5 —</span>
-              <p class="text">Большинство едет в гранд каньон  и толпится там</p>
-            </li>
-          </div>
+          <li>
+            <ul class="feature-item-grey">
+              <li class="feature-item">
+                <h3 class="title">Небольшая площадь</h3>
+                <span>— №3 —</span>
+                <p class="text">Все достопримечательности  находятся очень близко</p>
+              </li>
+              <li class="feature-item">
+                <h3 class="title">Красивая  дорога</h3>
+                <span>— №4 —</span>
+                <p class="text">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
+              </li>
+              <li class="feature-item">
+                <h3 class="title">Мало  туристов</h3>
+                <span>— №5 —</span>
+                <p class="text">Большинство едет в гранд каньон  и толпится там</p>
+              </li>
+            </ul>
+          </li>
         </ul>
       </section>
 
@@ -108,9 +110,9 @@
 
       <section class="map">
         <h2 class="visually-hidden">Карта города Седона</h2>
-      <iframe
+        <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34079.941600484926!2d-111.7561834547767!3d34.86406816782347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1583178214904!5m2!1sru!2sru"
-          width="1200" height="567" frameborder="0" style="border:0;" allowfullscreen>
+          width="1200" height="567" style="border:0;" allowfullscreen>
         </iframe>
         <div class="modal-search">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
@@ -135,7 +137,7 @@
                 <button class="btn-count btn-minus" type="button">
                   <span class="minus"></span>
                 </button>
-                <input type="text" name="adults" id="adults" min="0" step="1" value="2" placeholder="2">
+                <input type="text" name="adults" id="adults" value="2" placeholder="2">
                 <button class="btn-count btn-plus" type="button">
                   <span class="plus"></span>
                 </button>
@@ -145,7 +147,7 @@
                 <button class=" btn-count btn-minus" type="button">
                   <span class="minus"></span>
                 </button>
-                <input type="text" name="children" id="children" min="0" step="1" value="0" placeholder="0">
+                <input type="text" name="children" id="children" value="0" placeholder="0">
                 <button class="btn-count btn-plus" type="button">
                   <span class="plus"></span>
                 </button>
