--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="nav">
         <ul class="site-nav">
-          <li><a href="#" class="current-link">Информация</a></li>
+          <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="catalog.html">Гостиницы</a></li>
