--- a/catalog.html
+++ b/catalog.html
@@ -204,8 +204,8 @@
         <a class="contact-tel catalog-tel" href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
       </p>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
-      <ul class="social-list catalog-social">
-        <li class="social-button catalog-icon">
+      <ul class="social-list">
+        <li class="social-button">
           <a href="" aria-label="Твиттер">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15"
               viewBox="0 0 17 15">
@@ -214,14 +214,14 @@
             </svg>
           </a>
         </li>
-        <li class="social-button catalog-icon">
+        <li class="social-button">
           <a href="" aria-label="Фейсбук">
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
               <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
             </svg>
           </a>
         </li>
-        <li class="social-button catalog-icon">
+        <li class="social-button">
           <a href="" aria-label="Ютуб">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
               viewBox="0 0 20 16">
