чекбоксы стиль при заблокированном режиме

--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
                   alt="Фото спа-отеля Amara Resort & Spa">
               </a>
               <div>
-                <h3 class="catalog-title">Amara Resort & Spa</h3>
+                <a class="catalog-title">Amara Resort & Spa</a>
                 <div class="catalog-row">
                   <p class="catalog-type-one">Гостиница</p>
                   <p class="catalog-price">От 4000 Р.</p>
@@ -154,7 +154,7 @@
                   alt="Фото мотеля Desert Quail Inn">
               </a>
               <div>
-                <h3 class="catalog-title">Desert Quail Inn</h3>
+                <a class="catalog-title">Desert Quail Inn</a>
                 <div class="catalog-row">
                   <p class="catalog-type-two">Мотель</p>
                   <p class="catalog-price">От 3000 Р.</p>
@@ -178,7 +178,7 @@
                   alt="Фото апартаментов Villas at Poco Diablo">
               </a>
               <div>
-                <h3 class="catalog-title">Villas at Poco Diablo</h3>
+                <a class="catalog-title">Villas at Poco Diablo</a>
                 <div class="catalog-row">
                   <p class="catalog-type-three">Апартаменты</p>
                   <p class="catalog-price">От 2000 Р.</p>
