исправления по результатам

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/min-style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
           <li><a href="#" class="current-link" tabindex="5"> Гостиницы</a></li>
         </ul>
       </nav>
-      <a class="" href="index.html" tabindex="3">
+      <a class="logo-link" href="index.html" tabindex="3">
         <img class="logo" src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны">
       </a>
     </header>
@@ -31,7 +31,7 @@
         <h2 class="visually-hidden">Фильтр мест проживания</h2>
         <form class="filter" action="https://echo.htmlacademy.ru" method="GET">
           <div class="filter-group-one">
-            <fieldset class="filter-facilities">
+            <fieldset class="fieldset filter-facilities">
               <legend>Инфраструктура:</legend>
               <ul class="filter-options">
                 <li class="filter-option">
@@ -48,7 +48,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="filter-type">
+            <fieldset class="fieldset filter-type">
               <legend>Тип жилья</legend>
               <ul class="filter-options">
                 <li class="filter-option">
