--- a/catalog.html
+++ b/catalog.html
@@ -198,7 +198,7 @@
       </section>
     </main>
 
-    <footer class="footer-catalog">
+    <footer class="footer footer-catalog">
       <p class="footer-contacts">
         <a class="contact-link" href="#" aria-label="#Посетить Седону">#visitSEDONA</a><br>
         <a class="contact-tel catalog-tel" href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
