--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer footer-index">
       <p class="footer-contacts">
         <a class="contact-link" href="#" aria-label="#Посетить Седону">#visitSEDONA</a><br>
         <a class="contact-tel" href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
